# NeuPI

./: .gitignore  .readthedocs.yaml  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/source/: api_reference.rst  conf.py  contents.rst  examples.rst  index.rst
docs/source/details/: paper_details.md
docs/source/docs/: paper_details.md
docs/source/examples/: discretization.ipynb  inference.ipynb  losses.ipynb  training.ipynb
docs/source/examples/networks/spn/ad/: spn.json
docs/source/examples/networks/spn/nltcs/: spn.json
docs/source/examples/networks/spn/plants/: spn.json
examples/: inference.ipynb  losses.ipynb  training.ipynb
neupi/: __init__.py  losses.py
neupi/discretize/: threshold.py
neupi/discretize/cython_kn/: kn_binary_vectors.cpp  kn_binary_vectors.html
neupi/inference/: itself.py  single_pass.py
neupi/models/: nn.py
neupi/pm/io/: uai_reader_cython.cpp  uai_reader_cython.html
neupi/pm/nam/: made.py
neupi/pm/pc/: spn.py
neupi/pm/pgm/: mn.py
neupi/pm_ssl/io/: uai_reader_cython.cpp  uai_reader_cython.html
neupi/pm_ssl/pgm/: mn.py
neupi/training/: ssl_trainer.py
neupi/training/pm_ssl/io/: uai_reader_cython.cpp  uai_reader_cython.html
tests/: test_import.py  test_itself.py  test_mn_and_loss.py  test_single_pass_inference.py  test_spn.py  test_trainer.py
tests/discretize/: test_kn.py  test_oauai.py
tests/inference/: test_itself.py  test_single_pass_inference.py
tests/losses/: test_mn_and_loss.py  test_spn.py
tests/models/: test_mn_and_loss.py  test_spn.py
tests/training/: test_trainer.py
